# CIFAR10-TFModel

./: README.md  autokeras_trial01.py  automl.py  cmd  model.py  model2.py  output.npy  pyproject.toml  test.py
image_classifier/: oracle.json
image_classifier/trial_8e8665c76e48c974e729d6aeacc33fdf/: trial.json
image_classifier/trial_8e8665c76e48c974e729d6aeacc33fdf/checkpoints/epoch_0/: checkpoint.data-00000-of-00001  checkpoint.index
image_classifier/trial_8e8665c76e48c974e729d6aeacc33fdf/checkpoints/epoch_1/: checkpoint.data-00000-of-00001  checkpoint.index
saved_models/: saved_model.pb
saved_models/variables/: variables.index
starter_code/: Configure.py  DataLoader.py  ImageUtils.py  Model.py  Network.py  Network2.py  Network3.py  README.md  main.py  predictions_.npy  test.py
