[tool.poetry]
name = "cifar10-tfmodel"
version = "0.1.0"
description = ""
authors = ["Md Nazmus Sakib <mnsakib.buet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "2.2.0"
tensorflow-datasets = "^4.1.0"
matplotlib = "^3.3.3"
numpy = "1.19.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
