[tool.poetry]
name = "cifar10-tfmodel"
version = "0.1.0"
description = ""
authors = ["Md Nazmus Sakib <mnsakib.buet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "2.3.0"
tensorflow-datasets = "^4.1.0"
matplotlib = "^3.3.3"
autokeras = "^1.0.11"
keras-tuner = {git = "https://github.com/keras-team/keras-tuner.git", rev = "1.0.2rc3"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
